addproj is working. finishing http request

--- a/public/templates/directiveTemplates/addProject.html
+++ b/public/templates/directiveTemplates/addProject.html
@@ -1,2 +1,5 @@
-<h1>Add Project Template is working!</h1>
-<h1>{{test}}</h1>
+<input type="text" ng-model="name" name="name" value="Project Name">
+<input type="text" ng-model="startDate" name="startDate" value="Start Date">
+<input type="text" ng-model="deadline" name="deadline" value="Deadline">
+<button ng-click="newproj(name, startDate, deadline)"type="button" name="save">Save Project</button>
+<!-- template is working -->
