--- a/public/templates/routeTemplates/newProject.html
+++ b/public/templates/routeTemplates/newProject.html
@@ -1,2 +1,2 @@
-<add-project-directive></add-project-directive>
-<p>test</p>
+<add-Project-Directive></add-Project-Directive>
+<!-- template is working -->
