--- a/public/templates/directiveTemplates/addProject.html
+++ b/public/templates/directiveTemplates/addProject.html
@@ -3,3 +3,4 @@
 <input type="text" ng-model="deadline" name="deadline" value="Deadline">
 <button ng-click="newproj(name, startDate, deadline)"type="button" name="save">Save Project</button>
 <!-- template is working -->
+<!-- ng models are working -->
