--- a/public/templates/directiveTemplates/addProject.html
+++ b/public/templates/directiveTemplates/addProject.html
@@ -1,6 +1,6 @@
-<input type="text" ng-model="name" name="name" value="Project Name">
-<input type="text" ng-model="startDate" name="startDate" value="Start Date">
-<input type="text" ng-model="deadline" name="deadline" value="Deadline">
-<button ng-click="newproj(name, startDate, deadline)"type="button" name="save">Save Project</button>
+<input type="text" ng-model="projectName" name="name" value="Project Name">
+<input type="text" ng-model="projectStartDate" name="startDate" value="Start Date">
+<input type="text" ng-model="ProjectDeadline" name="deadline" value="Deadline">
+<button ng-click="newproj(projectName, projectStartDate, ProjectDeadline)"type="button" name="save">Save Project</button>
 <!-- template is working -->
 <!-- ng models are working -->
