--- a/public/templates/directiveTemplates/projectSummaries.html
+++ b/public/templates/directiveTemplates/projectSummaries.html
@@ -1,11 +1,11 @@
 <!-- {{projects}} -->
 <div ng-repeat="project in projects" class="">
 
-<button ng-model="project.id" type="button"  class="projectSummaries">
+<button ng-click="goToProject(project.id)" type="button"  class="projectSummaries">
 {{project.name}}
 {{project.startdate}}
 {{project.deadline}}
-  <button ng-model="project.id" ng-click="deleteProject()" type="button" name="button" class="deleteProject">
+  <button ng-click="deleteProject()" type="button" name="button" class="deleteProject">
     Delete Project
   </button>
 </button>
