final save for today

--- a/public/templates/directiveTemplates/project.html
+++ b/public/templates/directiveTemplates/project.html
@@ -1,1 +1,7 @@
-hello
+<div ng-repeat="project in project">
+{{project.project_name}} <br>
+{{project.project_deadline}} <br>
+{{project.project_startdate}} <br>
+{{project.customer_name}} <br>
+
+</div>
