--- a/public/templates/directiveTemplates/project.html
+++ b/public/templates/directiveTemplates/project.html
@@ -3,5 +3,15 @@
 {{project.project_deadline}} <br>
 {{project.project_startdate}} <br>
 {{project.customer_name}} <br>
-
+{{project.customer_email}} <br>
+{{project.customer_phone}} <br>
+</div>
+<div ng-repeat="invoice in invoices">
+  {{invoice.invoice_id}} <br>
+  {{invoice.invoice_description}} <br>
+  {{invoice.invoice_period}} <br>
+  {{invoice.invoice_subtotal}} <br>
+</div>
+<div class="">
+  <add-customer></add-customer>
 </div>
