--- a/public/templates/directiveTemplates/project.html
+++ b/public/templates/directiveTemplates/project.html
@@ -13,5 +13,5 @@
   {{invoice.invoice_subtotal}} <br>
 </div>
 <div class="">
-  <add-customer></add-customer>
+  <add-customer ng-model="project.id"></add-customer>
 </div>
