--- a/public/templates/directiveTemplates/navBar.html
+++ b/public/templates/directiveTemplates/navBar.html
@@ -8,7 +8,7 @@
         </div>
       </a>
       <div ng-model="navProjectName"class="navProjectName right-align right">
-        <h4>{{navProjectName}}</h4>
+        <h4 class="white-text">{{navProjectName}}</h4>
       </div>
 
   </div>
