--- a/public/templates/directiveTemplates/projectSummaries.html
+++ b/public/templates/directiveTemplates/projectSummaries.html
@@ -14,7 +14,7 @@
 <div ng-repeat="project in projects" class="project-button">
     <a ui-sref="seeProject({id: project.id})">
       <div class="view-button right">
-        <div class="arrow-button waves-effect waves-light shadow-effect">
+        <div class="round-button waves-effect waves-light shadow-effect">
           <img class="arrow"src="/images/arrow.png" alt="" />
         </div>
       </div>
