--- a/public/templates/routeTemplates/home.html
+++ b/public/templates/routeTemplates/home.html
@@ -1,2 +1,12 @@
-<!-- <add-customer>
-</add-customer> -->
+<nav-bar></nav-bar>
+<div class="quote-container">
+  <div class="quote white-text">
+    <h5>
+      Simplicity and repose are the qualities that measure the true value of any work of art.
+    </h5>
+  </div>
+  <div class="author white-text">
+    <h5>-Frank Lloyd Wright</h5>
+  </div>
+
+</div>
