--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -1,7 +1,6 @@
 /*dark background color #2F383D*/
 /*light background color #9E9E9E*/
-@import 'https://fonts.googleapis.com/css?family=Courgette|Oxygen';
-// @import 'https://fonts.googleapis.com/css?family=Courgette';
+@import 'https://fonts.googleapis.com/css?family=Comfortaa|Courgette|Oxygen|Roboto';// @import 'https://fonts.googleapis.com/css?family=Courgette';
 
 
 // VARIABLES!!!
@@ -17,13 +16,25 @@ $logoFont2: 'Courgette', cursive;
 
 
 //Universal Styles!!!!
-
-
+h1,h2,h3,h4,h5,p{
+  font-family: 'Roboto', sans-serif;
+}
+a:visited{
+  text-decoration: none;
+  text-decoration-color: black;
+}
 body{
    background: $smallBackgroundImage;
+
+}
+a{
+  text-decoration: none;
 }
 .shadow-effect{
   box-shadow: -2px 2px 6px $darkColor;
+}
+.darker-shadow-effect{
+  box-shadow: -2px 2px 6px black;
 }
 .input-field label{
   color: black;
@@ -60,53 +71,106 @@ body{
 }
 
 .add-button-box{
-  width: 335px;
+  width: 337px;
   height: 75px;
   background-color: $lightColor;
-  margin: 19px;
+  margin-left: 19px;
 }
+.round-button{
+  height: 37px;
+  width: 37px;
+  border-radius: 37px;
+  background-color: $darkColor;
+  padding-top: 3px;
+  padding-left: 4px;
+}
+.add-project-round-button{
+  margin-right: -22px;
+  margin-top: -24px;
+}
+.add-project-title{
+  color: black;
 
-
-
+}
+.soften-background{
+height: 100vh;
+width: 100vw;
+background-color:rgba(0, 0, 0, 0.5);
+}
 //NAVIGATION!!!
-
+.header-wrapper{
+  display: flex;
+}
 
 
 .main-header{
   background-color: $darkColor;
-  height: 120px;
+  height: 90px;
   width: 100%;
+  display: flex;
+  justify-content:space-between;
 }
 .b66{
   font-family: $logoFont1;
-  font-size: 30px;
+  font-size: 24px;
   color: $darkColor;
 }
 .living{
   font-family: $logoFont2;
-  font-size: 30px;
+  font-size: 24px;
   color: $darkColor;
 
 }
 .companyLogo{
-  width: 100px;
-  height: 100px;
+  width: 75px;
+  height: 75px;
   border-radius: 100px;
   background-color: $mainAccentColor;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-left: 10px;
-  margin-top: 10px;
+  margin-left: 5px;
+  margin-top: 6px;
 }
 .navProjectName{
-width: 50%;
-margin-right: 40px;
-margin-top: 29px;
+width: 157px;
+height: 65px;
+margin-right: 30px;
+margin-top: 12px;
+z-index: 2;
+background-color: $lightColor;
+display: flex;
+align-items: center;
+justify-content: center;
+
+  h5{
+  vertical-align: middle;
+  text-align: center;
+
+  }
 }
 
+.nav-project-name-text{
+  color: black;
+}
 
+//Home Template!!!!
+.quote-container{
+  width: 90%;
+  height: 65%;
+}
+.author h5{
+  font-family: 'Comfortaa', cursive;
+  font-weight: 300;
+  letter-spacing: .5px;
+
+}
+.quote h5{
+font-family: 'Roboto', sans-serif;
+letter-spacing: 1px;
+
+}
 
 //Add Project!!!!
 
@@ -124,72 +188,85 @@ margin-top: 29px;
   margin: 1%;
 }
 .add-project-title{
-
+  color: black;
 }
 .add-project-form-wrapper{
 
 }
-
+.add-project-button-wrapper{
+  margin: -5px;
+}
 
 
 //Project Summaries!!!!
 
+.summary-hr{
+color: black;
+width: 100%;
 
-
+}
+.hr-div{
+  display: inline-block;
+  width: auto;
+  overflow: hidden;
+  white-space: nowrap;
+}
 .project-button{
   width: 100%;
   height: 100px;
-  margin: 10px;
+  margin-left: 10px;
 }
 .view-button{
   height: 60px;
   width: 60px;
   margin-right: 6px;
-  margin-top: 20px;
+  margin-top: 10px;
 }
 .project-box{
-  width: 90%;
-  height: 100%;
+  width: 337px;
+  height: 75px;
   background-color: $lightColor;
   margin: 1%;
 }
 .project-name{
-  font-size: 28px;
   color: black;
   position: relative;
-  top: 20px;
+  top: 0px;
   left: 5px;
+  width: auto;
+  display: inline-block;
 }
 .start-date{
   color: $mainAccentColor;
   font-size: 16px;
   position: relative;
-  top: 30px;
+  top: 0px;
+  right: 10px;
+  margin-right: 5px;
 
 }
 .arrow{
   width: 50px;
   height: 50px;
 }
-.round-button{
-  height: 55px;
-  width: 55px;
-  border-radius: 55px;
-  background-color: $darkColor;
-  padding-top: 3px;
-  padding-left: 4px;
-}
+
 .projectSummaries{
   width: 100px;
   height: 100px;
   background-color: $lightColor;
   margin: 5px;
 }
-
+.project-summaries-content{
+  height: 577px;
+  overflow: scroll;
+}
 
 //Project View!!!
 
-
+.project-content{
+  height: 667px;
+  overflow: scroll;
+}
 
 .customerContainer{
   background-color: $lightColor;
@@ -208,8 +285,19 @@ hr{
   margin-right: 32px;
 
 }
-
-
+.round-delete-button{
+  height: 37px;
+  width: 37px;
+  border-radius: 37px;
+  background-color: $darkColor;
+  padding-top: 3px;
+  padding-left: 4px;
+  margin-right: 5px;
+}
+.red-image-delete{
+  height: 30px;
+width: 30px;
+}
 
 // Add Customer!!!!
 
@@ -228,17 +316,20 @@ hr{
 .red-image-add{
   height: 49px;
   width: 48px;
+  position: relative;
+  right: 4px;
+  bottom: 4px;
 }
 .round-add-button{
-  height: 55px;
-  width: 55px;
-  border-radius: 55px;
+  height: 37px;
+  width: 37px;
+  border-radius: 37px;
   background-color: $darkColor;
   padding-top: 3px;
   padding-left: 4px;
   position: relative;
-  right: -21px;
-  top: -23px;
+  right: 5px;
+  top: -16px;
 }
 .add-button-box-title{
   position: relative;
@@ -249,9 +340,14 @@ hr{
 
 // Add Invoice!!!!!!
 
-
-
+.round-add-invoice-button{
+  height: 37px;
+  width: 37px;
+  border-radius: 37px;
+  background-color: $darkColor;
+}
 .addInvoice{
-  width: 200px;
+  width: 550px;
   height: 200px;
+  background-color: $lightColor;
 }
