--- a/public/templates/directiveTemplates/project.html
+++ b/public/templates/directiveTemplates/project.html
@@ -1,55 +1,77 @@
-<nav-bar> </nav-bar>
+<div class="project-content">
+
+    <nav-bar> </nav-bar>
 
 
-<!-- <div >
-  <ul class="collection with-header">
-    <li class="collection-header"><h4>Invoices</h4></li>
-    <div class="" ng-repeat="invoice in invoices">
-      <li class="collection-item"><div>{{invoice.invoice_id}}</div></li>
-      <li class="collection-item"><div>{{invoice.invoice_description}}</div> </li>
-      <li class="collection-item"><div>{{invoice.invoice_period}}</div></li>
-      <li class="collection-item"><div>{{invoice.invoice_subtotal}}</div></li>
+
+    <div class="customerContainer shadow-effect container"ng-repeat="project in project">
+      <div class="row">
+        <div class="containerTitle center-align col s12">
+          <h5>Customer Information</h5>
+        </div>
+        <div class="containerInfo col s12">
+          {{project.customer_name}}
+          <i class="small material-icons left">perm_identity</i>
+        </div>
+        <hr>
+        <div class="containerInfo col s12">
+          {{project.customer_email}}
+          <i class="small material-icons left">email</i>
+        </div>
+        <hr>
+
+        <div class="containerInfo col s6">
+          {{project.customer_phone}}
+          <i class="small material-icons left">phone</i>
+        </div>
+
+        <div class="deleteButton right">
+          <div class="round-delete-button shadow-effect waves-effect waves-light ">
+            <div class="red-image-delete">
+              <img class="red-image-delete right-align"src="/images/delete.png" alt="" />
+            </div>
+          </div>
+        </div>
+
+      </div>
     </div>
 
-  </ul>
-</div> -->
-<div class="customerContainer shadow-effect container"ng-repeat="project in project">
 
-  <div class="row">
-    <div class="containerTitle center-align col s12">
-      <h5>Customer Information</h5>
-    </div>
-    <div class="containerInfo col s12">
-      {{project.customer_name}}
-      <i class="small material-icons left">perm_identity</i>
-    </div>
-    <hr>
-    <div class="containerInfo col s12">
-      {{project.customer_email}}
-      <i class="small material-icons left">email</i>
-    </div>
-    <hr>
 
-    <div class="containerInfo col s6">
-      {{project.customer_phone}}
-      <i class="small material-icons left">phone</i>
-    </div>
+    <div class="addFields">
+      <div class="addCustomer">
+        <add-customer></add-customer>
+      </div>
+      <!-- <div >
+        <ul class="collection with-header">
+          <li class="collection-header"><h4>Invoices</h4></li>
+          <div class="" ng-repeat="invoice in invoices">
+            <li class="collection-item"><div>{{invoice.invoice_id}}</div></li>
+            <li class="collection-item"><div>{{invoice.invoice_description}}</div> </li>
+            <li class="collection-item"><div>{{invoice.invoice_period}}</div></li>
+            <li class="collection-item"><div>{{invoice.invoice_subtotal}}</div></li>
+          </div>
 
-    <div class="editButton">
-      <a class="waves-effect waves-light btn right"><i class="material-icons right">cloud</i>Edit</a>
+        </ul>
+      </div> -->
+
+
+
+
+      <!-- <div class="addInvoice"> -->
+        <add-invoice></add-invoice>
+      <!-- </div> -->
     </div>
-  </div>
+    
+    <div class="invoice-container-wrapper container">
+      <div class="invoice-container row">
+
+        <div class="invoice-period col s6">
+          {{invoice.invoice_period}}
+        </div>
+        <div class="invoice-description col s6">
+          {{invoice.invoice_description}}
+        </div>
+      </div>
+    </div>
 </div>
-
-
-
-<div class="addFields">
-  <div class="addCustomer">
-    <add-customer></add-customer>
-  </div>
-
-
-  <!-- <div class="addInvoice">
-    <add-invoice></add-invoice>
-  </div>
-</div> -->
