saving for the night

--- a/public/templates/directiveTemplates/addInvoice.html
+++ b/public/templates/directiveTemplates/addInvoice.html
@@ -1,4 +1,4 @@
-<div ng-click="showAddInvoiceField = !showAddInvoiceField" ng-show="!showAddInvoiceField" class="add-button-box shadow-effect">
+<div ng-click="showAddInvoiceField = !showAddInvoiceField" ng-show="!showAddInvoiceField" class="add-button-box shadow-effect soft-border">
   <div class="add-button-box-title">
     <h5>Add Invoice</h5>
   </div>
@@ -10,7 +10,7 @@
 </div>
 
 
-<div ng-show="showAddInvoiceField" class="addInvoice input-field shadow-effect container">
+<div ng-show="showAddInvoiceField" class="addInvoice input-field shadow-effect container soft-border">
   <div class="row">
 
       <div class="col s12 center-align">
