--- a/public/templates/directiveTemplates/addProject.html
+++ b/public/templates/directiveTemplates/addProject.html
@@ -1,6 +1,6 @@
 
 <div class="add-project-button-wrapper" ng-click="showAddProjectField = !showAddProjectField" ng-show="!showAddProjectField">
-  <div class="add-button-box shadow-effect">
+  <div class="add-button-box shadow-effect soft-border">
     <h5 class="add-project-title center-align">Add Project</h5>
 
     <div class="add-project-round-button round-button right shadow-effect">
@@ -13,7 +13,7 @@
 
 
 <div class="add-project-wrapper" ng-show="showAddProjectField">
-  <div class="add-project-box shadow-effect">
+  <div class="add-project-box shadow-effect soft-border">
 
     <div class="add-project-title center-align">
       <h5>New Project Details</h5>
