--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -13,7 +13,7 @@ $smallBackgroundImage: url("../images/small.jpg");
 // $largeBackgroundImage: "";
 $logoFont1: 'Oxygen', sans-serif;
 $logoFont2: 'Courgette', cursive;
-
+$softBorder: 3px;
 
 //Universal Styles!!!!
 h1,h2,h3,h4,h5,p{
@@ -29,6 +29,9 @@ body{
 }
 a{
   text-decoration: none;
+}
+.soft-border{
+  border-radius: $softBorder;
 }
 .shadow-effect{
   box-shadow: -2px 2px 6px $darkColor;
@@ -317,7 +320,7 @@ width: 30px;
   height: 49px;
   width: 48px;
   position: relative;
-  right: 4px;
+  right: 4.5px;
   bottom: 4px;
 }
 .round-add-button{
@@ -350,4 +353,48 @@ width: 30px;
   width: 550px;
   height: 200px;
   background-color: $lightColor;
+}
+
+//Invoices on Project page!!
+.invoice-container-wrapper{
+  // width: 550px;
+  background-color: $darkColor;
+  width: 337px;
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  margin-left: 19px;
+  margin-top: 12px;
+  // padding-top: 60px;
+  max-height: 300px;
+  overflow: scroll;
+
+}
+.invoice-container{
+  // width: 550px;
+  min-width: 158px;
+  height: 100px;
+  background-color: $lightColor;
+  margin-top: 10px;
+  display: flex;
+  justify-content: space-around;
+  flex-direction: column;
+  align-items: center;
+}
+.invoices-section-title{
+  color: white;
+  margin: 0px;
+  height: 50px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+.invoice-period-text{
+  font-size: 20px;
+  color: $mainAccentColor;
+}
+.invoice-description-text{
+font-size: 20px;
+color: $darkColor;
+
 }
