--- a/public/templates/directiveTemplates/addCustomer.html
+++ b/public/templates/directiveTemplates/addCustomer.html
@@ -1,4 +1,4 @@
-<div ng-show="showAddField" class="add-customer-info shadow-effect input-field container">
+<div ng-show="showAddField" class="add-customer-info shadow-effect input-field container soft-border">
   <div class="row">
     <div class="col s12 center-align">
       <h5>Add Customer</h5>
@@ -18,7 +18,7 @@
   </div>
 </div>
 
-<div ng-click="showAddField = !showAddField" ng-show="!showAddField"class="add-button-box shadow-effect">
+<div ng-click="showAddField = !showAddField" ng-show="!showAddField"class="add-button-box shadow-effect soft-border">
   <div class="add-button-box-title">
     <h5>Add Customer Information</h5>
   </div>
