--- a/public/templates/directiveTemplates/navBar.html
+++ b/public/templates/directiveTemplates/navBar.html
@@ -8,7 +8,7 @@
         </div>
       </a>
       <a class="nav-project-name-text" ui-sref="projects">
-        <div ng-model="navProjectName"class="navProjectName darker-shadow-effect">
+        <div ng-model="navProjectName"class="navProjectName darker-shadow-effect soft-border">
             <h5 >{{navProjectName}}</h5>
         </div>
       </a>
