--- a/public/templates/directiveTemplates/projectSummaries.html
+++ b/public/templates/directiveTemplates/projectSummaries.html
@@ -13,14 +13,14 @@
 <!-- <button ng-click="deleteProject()" type="button" name="button" class="deleteProject">
   Delete Project
 </button> -->
-<div ng-repeat="project in projects" class="project-button">
+<div ng-repeat="project in projects" class="project-button soft-border">
     <a ui-sref="seeProject({id: project.id})">
       <div class="view-button right">
         <div class="round-button waves-effect waves-light shadow-effect">
           <img class="arrow"src="/images/arrow.png" alt="" />
         </div>
       </div>
-      <div class="project-box shadow-effect ">
+      <div class="project-box shadow-effect soft-border">
         <div class="project-name  left-align">
           <h5>{{project.name}}</h5>
           <!-- <div class="hr-div">
